Changes by mirjam (change switch cases)